new raw strings

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -172,6 +172,8 @@ af:
     invalid chapter title:                      "Oor Hierdie Weergawe"
     invalid chapter text:                       "Hierdie hoofstuk bestaan nie in hierdie weergawe nie."
     invalid secondary chapter text:             "Hierdie hoofstuk bestaan nie in jou gekose sekondêre weergawe nie."
+    no secondary version title:                 "About Parallel Comparison"
+    no secondary version text:                  "%{language_name} only has one version available, so we couldn't pick a secondary version for you. Please select your secondary version for parallel comparison."
     select another chapter:                     "Kies 'n Ander Hoofstuk"
     view in reader:                             "Besigtig %{reference} in Leser"
   users:
@@ -234,6 +236,10 @@ af:
     confirm update email success:               "Dankie! Jou e-pos adres is verander."
     confirm update email error:                 "Jammer, daar het 'n probleem ingesluip met die voltooiing van die e-pos adres verandering."
     account confirmed:                          "Jou rekening is bevestig!"
+    account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
+    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
+    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
+    confirm password to continue:               "Please enter your password to sign in and get started."
     invalid email forgot:                       "Jammer, ons kon nie 'n rekening opspoor met daardie e-pos adres nie. Probeer asb. weer."
     error deleting account:                     "Jammer, daar was 'n probleem aan ons kant. Probeer asseblief weer of kontak ons vir ondersteuning."
     send new password button:                   "Stuur Nuwe Wagwoord"
@@ -367,7 +373,7 @@ af:
     edit:                                       "Verander"
     delete:                                     "Vee hierdie Boekmerk uit"
     title field:                                "Titel"
-    lables:                                     "Etikette"
+    labels:                                     "Etikette"
     all:                                        "Alle"
     labels label:                               "Etikette:"
     title:                                      "Boekmerke"
@@ -518,6 +524,10 @@ af:
     donate now button:                          "Skenk Nou"
     email header:                               "YouVersion, 'n bediening van LifeChurch.tv, het jou skenking ontvang. Geen goedere of dienste is gelewer in ruil vir die skenking, behalwe ontasbare godsdiens voordele. Kontak asseblief giving@lifechurch.tv as jy enige vrae het."
     email footer:                               "Jou skenking sal mense regoor die wêreld help om 'n liefde te ontwikkel vir God se Woord."
+    address:                                    "Address"
+    city:                                       "City"
+    state:                                      "State"
+    zip:                                        "Zip"
   download ad:
     title:                                      "Laai die Free Bible App af"
     line 1:                                     "Honderde weergawes in baie"
@@ -532,7 +542,9 @@ af:
     youversion copy:                            "Sedert sy stigting in 1996, was dit LifeChurch.tv se doel om mense te lei om ten volle gewyde volgelinge van Christus te word. Deur dit te doen, het ons gekyk na nuwe maniere om mense te help die Bybel te verbind aan hul daaglikse lewe. Ons metodes het oor die jare verander soos ons verskillende tegnieke en strategieë ingelyf het. Maar aan die kern, bly ons fokus op die relevansie as ons voortdurend daarna streef om aan te toon en die mense te leer hoe God se Woord toepaslik is vir almal, maak nie saak waar hulle is in die lewe."
     youversion copy 2:                          "YouVersion verteenwoordig 'n nuwe grens in LifeChurch.tv se pogings. Ons bou nie net 'n instrument om 'n impak te maak in die wêreld deur gebruik te maak van innoverende tegnologie, meer belangrik, ons is besig om mense te betrek in 'n verhouding met God as hulle die toepaslikheid van die Bybel het vir hul lewens ontdek."
     partners title:                             "'n Spesiale Woord Van Dank Vir Ons Venote"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Ons Vertalings Spanne"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Media Area"
     contact header:                             "Media Kontak Inligting"
