--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -172,6 +172,8 @@ fr:
     invalid chapter title:                      "À propos de cette traduction"
     invalid chapter text:                       "Ce chapitre n'existe pas dans cette traduction."
     invalid secondary chapter text:             "Ce chapitre n'existe pas dans votre traduction secondaire."
+    no secondary version title:                 "About Parallel Comparison"
+    no secondary version text:                  "%{language_name} only has one version available, so we couldn't pick a secondary version for you. Please select your secondary version for parallel comparison."
     select another chapter:                     "Choisir un autre chapitre"
     view in reader:                             "Voir%{reference} dans le lecteur"
   users:
@@ -234,6 +236,10 @@ fr:
     confirm update email success:               "Merci! Vous avez mis à jour votre adresse Email."
     confirm update email error:                 "Désolé, un problème est survenu lors du changement de votre adresse Email."
     account confirmed:                          "Votre compte a été confirmé!"
+    account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
+    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
+    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
+    confirm password to continue:               "Please enter your password to sign in and get started."
     invalid email forgot:                       "Désolé, nous n'avons trouvé aucun correspondant à cette adresse Email. Veuillez réessayer."
     error deleting account:                     "Désolé, nous avons eu un problème. Merci de réessayer ou de contacter notre service technique."
     send new password button:                   "Envoyer un nouveau mot de passe"
@@ -367,7 +373,7 @@ fr:
     edit:                                       "Modifier"
     delete:                                     "Supprimer le signet"
     title field:                                "Titre"
-    lables:                                     "Étiquettes"
+    labels:                                     "Étiquettes"
     all:                                        "Toutes"
     labels label:                               "Étiquettes:"
     title:                                      "Favoris"
@@ -518,6 +524,10 @@ fr:
     donate now button:                          "Faire un don maintenant"
     email header:                               "YouVersion, un ministère de LifeChurch.tv, a reçu votre don. Aucun bien ou service n'a été fourni en échange du don, à l'exception d'avantages religieuses intangibles. S'il vous plaît contactez giving@lifechurch.tv en cas questions."
     email footer:                               "Votre don aidera les gens partout dans le monde à aimer la Parole de Dieu."
+    address:                                    "Address"
+    city:                                       "City"
+    state:                                      "State"
+    zip:                                        "Zip"
   download ad:
     title:                                      "Télécharger la Bible App gratuite"
     line 1:                                     "Des centaines de traductions dans"
@@ -532,7 +542,9 @@ fr:
     youversion copy:                            "Depuis ses débuts en 1996, l'objectif de LifeChurch.tv a été d'amener le peuple de Dieu à devenir de véritables et dévoués imitateurs de Christ. Dans cette optique, nous avons cherché de nouveaux moyens leur permettant de connecter la Bible à leur quotidien. Nos méthodes ont évolué au fil des années notamment avec les diverses innovations technologiques et stratégiques. Mais l'essentiel, notre vision, ce que nous tenons à démontrer à tout prix, est la pertinence de la Parole de Dieu: combien Elle est adaptée à la vie de chacun, quelle que soit sa situation."
     youversion copy 2:                          "YouVersion représente une nouvelle étape dans les efforts de LifeChurch.tv. Nous ne développons pas cet outil dans le seul but d'impacter le monde avec une technologie novatrice, en fait nous incitons les gens à s'engager dans une relation avec Dieu en découvrant l'importance de la Bible dans leurs vies."
     partners title:                             "Nos sincères remerciements à tous nos partenaires"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Nos équipes de traduction"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Zone de presse"
     contact header:                             "Contacts pour la presse"
