--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -57,7 +57,7 @@ km:
   my notifications:                             "គ្រប់​គ្រងការ​ដាស់​តឿន"
   my connections:                               "បាន​ភ្ជាប់​ទៅ​គណនី"
   my devices:                                   "បាន​ភ្ជាប់​ជាមួយ​ឧបករណ៍"
-  language name:                                "អង់​គ្លេស"
+  language name:                                "ខ្មែរ"
   sign in:                                      "Sign in"
   sign up:                                      "ចុះ​ឈ្មោះ​"
   have an account:                              "មាន​គណនី​រួច​ហើយ​?"
@@ -86,7 +86,7 @@ km:
   terms:                                        "លក្ខខណ្ឌ័"
   press:                                        "ដំណឹង"
   get support:                                  "គាំ​ទ្រ"
-  donate title:                                 "ឧបត្ថម្ភ"
+  donate title:                                 "បរិច្ចាក"
   choose language field:                        "ជ្រើស​រើស​ភាសា"
   settings:                                     "ការ​កំណត់"
   profile:                                      "ទម្រង់"
@@ -172,6 +172,8 @@ km:
     invalid chapter title:                      "អំពី​ជំនាន់​នេះ"
     invalid chapter text:                       "ជំពូក​នេះ​ មិន​មាន​នៅ​ក្នុង​ជំនាន់​នេះ​ទេ"
     invalid secondary chapter text:             "ជំពូក​នេះ​មិន​មាន​នៅ​ទេ តែ អ្នក​អាច​សាក​ប្រើ​ជំនាន់​ទី២វិញ"
+    no secondary version title:                 "អំពី​ផ្ទាំង​ប្រៀប​ធៀប"
+    no secondary version text:                  "%{language_name} មាន​តែ​មួយ​ជំនាន់​ទេ​ដែល​មាន យើង​មិន​អាច​ទាញ​យក​ជំនាន់​ទី២​អោយ​អ្នក​បានឡើយ។ សូម​ជ្រើស​រើស​ជំនាន់​ទី​២​សំរាប់​ផ្នែក​ផ្សេង​ដើម្បី​ប្រៀប​ធៀប។"
     select another chapter:                     "ជ្រើស​រើស​ជំពូក​ផ្សេង"
     view in reader:                             "បង្ហាញ %{reference} ក្នុង​កម្មវិធីអាន"
   users:
@@ -234,6 +236,10 @@ km:
     confirm update email success:               "អរគុណ! លោក​អ្នក​បាន​បន្ទាន់​សម័យ​នូវ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​ហើយ។"
     confirm update email error:                 "សូម​ទោស មាន​បញ្ហា​ក្នុង​ការ​បញ្ចប់​ការ​ប្ដូរ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​របស់​អ្នក។"
     account confirmed:                          "គណនី​របស់​អ្នក​ត្រូវ​បាន​បញ្ជាក់​រួច​ហើយ!"
+    account already confirmed:                  "គណនី​របស់​អ្នក​បាន​បញ្ជាក់​រួច​ហើយ! សូម​ចុះ​ឈ្មោះ​ចូល​ដើម្បី​បន្ត។"
+    errors confirming account:                  "សូម​ទោស មាន​កំហុស​កើត​មាន​ឡើង​នៅ​ផ្នែក​ខាងយើង។ លោក​អ្នក​អាច​ ធ្វើ​អោយ​កម្ម​វិធី​រុក​រក​របស់​អ្នក​ជា​ថ្មី​ឡើង​វិញ, ហើយ​ប្រសិន​បើ​វា​នៅ​តែ​បន្ត​កើត​មាន​ឡើង​ដូច​នេះ ចុច​សំណើរ​ខាង​ក្រោម ដើម្បី​សុំ​លេខ​កូដ​បញ្ជាក់​អ៊ី​ម៉ែល​​ថ្មី​មួយ​ទៀត។"
+    invalid confirm hash:                       "សួម​ទោស លេខ​កូដ​បញ្ជាក់​មើល​ទៅ​ដូច​ជា​មិន​ត្រឹម​ត្រូវ។ លោក​អ្នក​អាច​ ធ្វើ​អោយ​កម្ម​វិធី​រុក​រក​របស់​អ្នក​ជា​ថ្មី​ឡើង​វិញ, ហើយ​ប្រសិន​បើ​វា​នៅ​តែ​បន្ត​កើត​មាន​ឡើង​ដូច​នេះ ចុច​សំណើរ​ខាង​ក្រោម ដើម្បី​សុំ​លេខ​កូដ​បញ្ជាក់​ថ្មី​មួយ​ទៀត។"
+    confirm password to continue:               "សូម​បញ្ចូល​ពាក្យ​សម្ងាត់​របស់​អ្នក​ដើម្បី​ចុះ​ឈ្មោះ​ហើយ​ចាប់​ផ្ដើម។"
     invalid email forgot:                       "សូម​ទោស យើង​មិន​អាច​រក​គណនី​ដែល​មានអាស័យ​ដ្ឋាន​​អ៊ី​ម៉ែល​នេះ​ទេ សូម​សាកល្បង​ម្ដង​ទៀត"
     error deleting account:                     "សូម​ទោស​ មាន​កំហុស​មួយ​ចំនូន​នៅ​ផ្នែក​ខាង​យើង។ សូម​សាក​ល្បង​ម្ដង​ទៀត ឬ​ទាក់​ទង​មក​ក្រុម​ជំនួយ​របស់​យើង។"
     send new password button:                   "ផ្ញើរ​ពាក្យ​សម្ងាត់​ថ្មី"
@@ -367,7 +373,7 @@ km:
     edit:                                       "កែសម្រួល"
     delete:                                     "លុប​ចេញ​កំណត់​ចំណាំ​នេះ"
     title field:                                "ចំណង​ជើង"
-    lables:                                     "ផ្លាក"
+    labels:                                     "ផ្លាក"
     all:                                        "ទាំង​អស់"
     labels label:                               "ផ្លាកៈ"
     title:                                      "កំណត់​ចំណាំ"
@@ -515,9 +521,13 @@ km:
     preview:                                    "បង្ហាញ​ពី​ការបរិច្ចាក"
     header copy:                                "ដោយ​រួម​គ្នា, យើង​នឹង​ក្លាយ​ទៅ​ជា ព្រះគម្ពីរ​ដែល​ផ្សាភ្ជាប់​ជាមួយ​នឹង​ជំនាន់​នេះ​ក្នុង​ប្រវត្តិសាស្ត្រ។ ការ​គាំ​ទ្រ​របស់​អ្នក​គឺ​ធ្វើ​អោយ​មនុស្ស​អាច​បើក​ព្រះបន្ទូលពី​គ្រប់​ទំរង់ ច្រើន​ភាសា ច្រើន​ជំនាន់ ហើយ​នៅ​ច្រើ​ប្រទេស​ជាង​ពី​មុន។ សូម​បំពេញ​នូវ​ទំរង់​ខាងក្រោម​ដើម្បី​ធ្វើ​ការ​បរិច្ចាក។ យើង​នឹង​ប្រមូល​រាល់​ព័ត៌មាន​បរិច្ចាក​ដាក់​នៅ​អេក្រង់​បន្ទាប់។"
     header confirm copy:                        "ដោយ​រួម​គ្នា, យើង​នឹង​ក្លាយ​ទៅ​ជា ព្រះគម្ពីរ​ដែល​ផ្សាភ្ជាប់​ជាមួយ​នឹង​ជំនាន់​នេះ​ក្នុង​ប្រវត្តិសាស្ត្រ។ ការ​គាំ​ទ្រ​របស់​អ្នក​គឺ​ធ្វើ​អោយ​មនុស្ស​អាច​បើក​ព្រះបន្ទូលពី​គ្រប់​ទំរង់ ច្រើន​ភាសា ច្រើន​ជំនាន់ ហើយ​នៅ​ច្រើ​ប្រទេស​ជាង​ពី​មុន។ ចុច បរិច្ចាក​ឥឡូវ ដើម្បី​ធ្វើ​ការ​បរិច្ចាក។"
-    donate now button:                          "ឧបត្ថម្ភ​ឥឡូវ"
+    donate now button:                          "បរិច្ចាក​ឥឡូវ"
     email header:                               "YouVersion ជាពន្ធ័កិច្ច​របស់ LifeChurch.tv បាន​ទទួល​នូវ​ការ​ឧបត្ថម្ភ​របស់​អ្នក។ មិន​មាន​ផលិត​ផល ឬ​សេវាកម្ម​ណា​មួយ​ត្រូវ​បាន​ផ្ដល់​ជា​សំណង​នៃការ​ឧបត្ថម្ភ​នេះ​ឡើយ លើក​លែង​តែ គុណ​ប្រយោជន័នៃជំនឿ​សាសនា។ សូម​ទាក់​ទងមកកាន់ giving@lifechurch.tv ប្រសិន​បើ​មាន​សំនួរ"
-    email footer:                               "ការឧបត្ថម្ភ​របស់​អ្នក​នឹង​ជួយ​ដល់​មនុស្ស​នៅ​ក្នុង​ពិភព​លោក​អោយ​ស្រឡាញ់​ដល់​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់។"
+    email footer:                               "ការបរិច្ចាក​​របស់​អ្នក​នឹង​ជួយ​ដល់​មនុស្ស​នៅ​ក្នុង​ពិភព​លោក​អោយ​ស្រឡាញ់​ដល់​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់។"
+    address:                                    "អាស័យដ្ឋាន"
+    city:                                       "ទី​ក្រុង"
+    state:                                      "រដ្ឋ"
+    zip:                                        "Zip"
   download ad:
     title:                                      "ដោន​ឡូដ​យក​ Bible App ដោយ​ឥត​គិតថ្លៃ"
     line 1:                                     "ជំនាន់​គម្ពីរ​រាប់​រយ​ដែ​លមាន​ជា"
@@ -532,7 +542,9 @@ km:
     youversion copy:                            "វា​ចាប់​ផ្ដើម​តាំង​ពី​ឆ្នាំ​1996, គោល​បំណង​របស់ LifeChurch.tv​ គឺជួយ​ដឹកនាំ​មនុស្ស​អោយ​ដើរ​តាម​ព្រះយេស៊ូ​គ្រីស្ត​យ៉ាង​ពេញ​ទំហឹង។ ដើម្បី​ធ្វើ​បាន​ដូច្នេះ យើង​រក​មើល​នូវ​របៀប​ថ្មីៗ​ជាច្រើន​ក្នុង​ការ​ជួយ​មនុស្ស​អោយ​ផ្សារភ្ជាប់​ជាមួយ​នឹង​ព្រះគម្ពីរ​នៅ​ក្នុង​ជីវិតរស់​នៅ​ប្រចាំ​ថ្ងៃ​របស់​ពួក​គេ។ វិធីសាស្ត្រ​របស់​យើង​ត្រូវ​បាន​ផ្លាស់​ប្ដូរ​ជា​ច្រើន ហើយ​យើង​ធ្វើ​ការ​សហប្រតិបត្តិការណ៍​ជាមួយ​នឹង​ប្រពន្ធ័តិចណូឡូជី និង​យុត្តសាស្ត្រ​ជា​ច្រើន​ផង​ដែរ។ ប៉ុន្តែរឿង​ដែល​សំខាន់ គឺ​ការ​តាំងចិត្ត​របស់​យើង​នៅ​តែ​មាន​ដដែល ដោយ​យើង​បាន​ព្យាយាម​គ្រប់​យ៉ាង ហើយ​បង្រៀន​មនុស្ស​ពី​ព្រះ​បន្ទូល​របស់​ព្រះជាម្ចាស់ ដែល​ទាក់​ទង​ទៅ​នឹង​មនុស្ស ទោះ​គេ​នៅ​ទី​ណា​ក៏​ដោយ​ចុះ។"
     youversion copy 2:                          "YouVersion តំណាង​អោយព្រំ​ដែន​ថ្មី​នៅ​ក្នុងកិច្ច​ខំ​ប្រឹង​ប្រែង​របស់ LifeChurch.tv។ យើ​ង​មិន​គ្រាន់​តែ​កសាង​នូវ​ឧបករណ៍​ដែល​ប៉ះពាល់​ដល់​ពិភព​លោក​ ដោយ​ប្រើ​ប្រាស់​នូវ​ប្រពន្ធ័តិចណូឡូជី​ទេ ដែល​សំខាន់​ជាង​នោះ​គឺ​យើង​ចង់​ផ្សាភ្ជាប់​មនុស្ស​ទៅកាន់​ទំនាក់​ទំនង​ជាមួយ​នឹង​ព្រះ ក្នុង​កំឡុង​ពេល​ដែល​ពួក​គេ​ស្វែង​រក​ព្រះគម្ពីរ​ដែល​អាច​យល់​នៅ​ក្នុង​ជីវិត​របស់​ពួក​គេ។"
     partners title:                             "អរគុណ​ជាពិសេស​ដល់​ដៃគូររបស់​យើង"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "ក្រុម​បក​ប្រែ​របស់​យើង"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "តំបន់សារព័ត៌មាន"
     contact header:                             "ព័ត៌មានទាក់ទងមក​កាន់​សារព័ត៌មាន"
