--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -172,6 +172,8 @@ nl:
     invalid chapter title:                      "Over Deze Versie"
     invalid chapter text:                       "Dit hoofdstuk bestaat niet in deze versie."
     invalid secondary chapter text:             "Dit hoofdstuk bestaat niet in je tweede voorkeursversie."
+    no secondary version title:                 "Over Parallel Vergelijken"
+    no secondary version text:                  "%{language_name} heeft maar één versie beschikbaar, dus we konden geen tweede versie voor je kiezen. Selecteer dus zelf een tweede versie om parallel te vergelijken"
     select another chapter:                     "Kies een ander Hoofdstuk"
     view in reader:                             "Bekijk %{reference} in Lezer"
   users:
@@ -234,6 +236,10 @@ nl:
     confirm update email success:               "Bedankt! Je e-mail adres is geüpdated."
     confirm update email error:                 "Sorry, er was een probleem met het voltooien van je e-mail adres wijziging."
     account confirmed:                          "Uw account is bevestigd!"
+    account already confirmed:                  "Jou account is bevestigd! Log in om verder te gaan."
+    errors confirming account:                  "Sorry, er ging iets mis aan onze kant. Je kan je browser herladen om opnieuw te proberen, of als dit blijft gebeuren, klik hieronder voor een nieuwe bevestiging mail."
+    invalid confirm hash:                       "Sorry, deze bevestiging code is niet geldig. Je kan je browser herladen om opnieuw te proberen, of als dit blijft gebeuren, klik hieronder voor een nieuwe bevestiging mail."
+    confirm password to continue:               "Vul je paswoord in om in te loggen en van slag te gaan."
     invalid email forgot:                       "Sorry, we konden geen account vinden onder dat e-mail adres. Probeer het opnieuw."
     error deleting account:                     "Sorry, er was een probleem aan onze kant. Probeer het opnieuw of neem contact op met de support."
     send new password button:                   "Nieuw Wachtwoord Sturen"
@@ -367,7 +373,7 @@ nl:
     edit:                                       "Bewerk"
     delete:                                     "Verwijder deze Bookmark"
     title field:                                "Titel"
-    lables:                                     "Label"
+    labels:                                     "Labels"
     all:                                        "Alle"
     labels label:                               "Labels:"
     title:                                      "Bladwijzers"
@@ -518,6 +524,10 @@ nl:
     donate now button:                          "Doneer Nu"
     email header:                               "YouVersion, een onderdeel van LifeChurch.tv, heeft uw donatie ontvangen. Er zijn geen goederen of diensten verstrekt in ruil voor de donatie, behalve immateriële religieuze voordelen. Neem contact op met giving@lifechurch.tv als u verder nog vragen heeft."
     email footer:                               "Jou donatie zal mensen over de hele wereld helpen om verliefd te worden op het woord van God. "
+    address:                                    "Adres"
+    city:                                       "Stad"
+    state:                                      "Staat"
+    zip:                                        "Postcode"
   download ad:
     title:                                      "Download de Gratis Bijbel App"
     line 1:                                     "Honderden versies in vele"
@@ -532,7 +542,9 @@ nl:
     youversion copy:                            "Sinds het begin in 1996, is het doel van LifeChurch.tv om mensen te leiden om volledig toegewijde navolgers van Christus te worden. Daarbij hebben wij naar nieuwe middelen gezocht om mensen te helpen een verbanden te leggen tussen de Bijbel en hun dagelijks leven. Onze methodes zijn veranderd in de loop der jaren, omdat wij verschillende technologieën en strategieën hebben ontwikkeld. Maar aan de basis blijft onze focus gericht op relevantie, terwijl we er voortdurend naar streven om mensen te tonen en te leren hoe Gods Woord betrekking heeft op iedereen, ongeacht waar ze staan in het leven."
     youversion copy 2:                          "YouVersion vormt een nieuwe grens in the streven van LifeChurch.tv. Wij zijn niet alleen maar een stuk gereedschap aan het bouwen om de wereld te beinvloeden met behulp van innovatieve technologie; maar nog belangrijker is het dat wij mensen met God verbinden, opdat zij de relevantie ontdekken die de Bijbel heeft voor hun leven."
     partners title:                             "Een speciale dank aan onze Partners"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Onze Vertaalteams"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Pers Area"
     contact header:                             "Pers contactinformatie"
