--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -173,6 +173,8 @@ pt-BR:
     invalid chapter title:                      "Sobre Esta Versão"
     invalid chapter text:                       "Este capítulo não existe nesta versão."
     invalid secondary chapter text:             "Este capítulo não existe para a sua versão secundária preferida."
+    no secondary version title:                 "About Parallel Comparison"
+    no secondary version text:                  "%{language_name} only has one version available, so we couldn't pick a secondary version for you. Please select your secondary version for parallel comparison."
     select another chapter:                     "Selecione um Capítulo Diferente"
     view in reader:                             "Ver %{reference} no Leitor"
   users:
@@ -235,6 +237,10 @@ pt-BR:
     confirm update email success:               "Obrigado! Você atualizou o seu endereço de e-mail."
     confirm update email error:                 "Desculpe, houve um problema ao completar a mudança do endereço de e-mail."
     account confirmed:                          "Sua conta foi confirmada! "
+    account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
+    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
+    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
+    confirm password to continue:               "Please enter your password to sign in and get started."
     invalid email forgot:                       "Desculpe, não conseguimos encontrar uma conta com esse endereço de e-mail. Por favor, tente novamente."
     error deleting account:                     "Desculpe, houve um problema. Por favor, tente novamente ou entre em contato com o suporte. "
     send new password button:                   "Enviar Nova Senha"
@@ -368,7 +374,7 @@ pt-BR:
     edit:                                       "Editar"
     delete:                                     "Apagar este Marcador"
     title field:                                "Título"
-    lables:                                     "Etiquetas"
+    labels:                                     "Etiquetas"
     all:                                        "Tudo"
     labels label:                               "Etiquetas:"
     title:                                      "Marcadores"
@@ -519,6 +525,10 @@ pt-BR:
     donate now button:                          "Doar Agora"
     email header:                               "YouVersion, um ministério da LifeChurch.tv, recebeu sua doação. Bens ou serviços não foram providos em troca, exceto os inatingíveis benefícios religiosos. Por favor, em dúvidas entre em contato com giving@lifechurch.tv ."
     email footer:                               "Sua doação ajudará pessoas ao redor do mundo a se voltarem ao amor com a Palavra de Deus."
+    address:                                    "Address"
+    city:                                       "City"
+    state:                                      "State"
+    zip:                                        "Zip"
   download ad:
     title:                                      "Baixe o App gratuito da Bíblia"
     line 1:                                     "Centenas de versões em muitos"
@@ -533,7 +543,9 @@ pt-BR:
     youversion copy:                            "Desde seu início em 1996, a missão da LifeChruch.tv tem sido levar pessoas a serem seguidores totalmente devotos de Cristo. Fazendo isso, nós procuramos novas formas de ajudar as pessoas a se conectar com a Bíblia no seu dia-a-dia. Nossos métodos tem mudado com o passar dos anos com a incorporação de várias tecnologias e estratégias. Mas, no fundo, nosso foco continua relevante se nos esforçarmos constantemente para demonstrar e ensinar as pessoas sobre como a Palavra de Deus diz respeito a todos, não importa onde eles estejam."
     youversion copy 2:                          "O YouVersion representa uma nova fronteira nos esforços da LifeChurch.tv. Não estamos apenas construindo uma ferramenta para impactar o mundo usando uma tecnologia inovadora, mas mais importante, estamos trazendo as pessoas a um relacionamento com Deus na medida em que elas descobrem a importância da Bíblia nas suas vidas."
     partners title:                             "Um Agradecimento Especial aos Nossos Parceiros"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Nossas Equipes de Tradução"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Área de Imprensa"
     contact header:                             "Informações de Contato de Imprensa"
