--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -172,6 +172,8 @@ ru:
     invalid chapter title:                      "Об этом переводе"
     invalid chapter text:                       "Эта глава не существует в выбранном переводе."
     invalid secondary chapter text:             "Этой главы нет в выбранном Вами втором переводе."
+    no secondary version title:                 "О режиме параллельного чтения"
+    no secondary version text:                  "На выбранном языке (%{language_name}) доступен всего один перевод, поэтому перевод для параллельного чтения не был выбран. Пожалуйста, выберите перевод для сравнения."
     select another chapter:                     "Выбрать другую главу"
     view in reader:                             "Открыть %{reference} в окне чтения"
   users:
@@ -234,6 +236,10 @@ ru:
     confirm update email success:               "Спасибо! Вы обновили свой адрес email."
     confirm update email error:                 "Извините, при обновлении адреса email возникла ошибка."
     account confirmed:                          "Ваш аккаунт был подтверждён!"
+    account already confirmed:                  "Ваш аккаунт уже был подтверждён! Для продолжения работы войдите в систему."
+    errors confirming account:                  "Извините, произошла ошибка на сервере. Вы можете обновить страницу в браузере или, если ошибка продолжает появляться, нажмите ссылку ниже, чтобы получить новое письмо для подтверждения аккаунта."
+    invalid confirm hash:                       "Извините, но этот код подтверждения неверен. Вы можете обновить страницу в браузере или, если ошибка продолжает появляться, нажмите ссылку ниже, чтобы получить новое письмо для подтверждения аккаунта."
+    confirm password to continue:               "Пожалуйста, введите пароль, чтобы войти в систему."
     invalid email forgot:                       "Извините, мы не смогли найти учётную запись, зарегистрированную на такой адрес email. Пожалуйста, попробуйте снова."
     error deleting account:                     "Извините, на сервере произошла ошибка. Пожалуйста, попробуйте позднее или обратитесь в службу поддержки."
     send new password button:                   "Выслать новый пароль"
@@ -367,7 +373,7 @@ ru:
     edit:                                       "Редактировать"
     delete:                                     "Удалить"
     title field:                                "Название"
-    lables:                                     "Ярлыки"
+    labels:                                     "Ярлыки"
     all:                                        "Все"
     labels label:                               "Ярлыки:"
     title:                                      "Закладки"
@@ -518,6 +524,10 @@ ru:
     donate now button:                          "Отправить пожертвование"
     email header:                               "YouVersion, миссионерское отделение LifeChurch.tv, получило Ваше пожертвование. За пожертвование Вам не были предоставлены никакие товары и услуги, за исключением нематериальных религиозных преимуществ. Пожалуйста, свяжитесь с giving@lifechurch.tv, если у Вас есть какие-либо вопросы."
     email footer:                               "Ваше пожертвование поможет людям по всему миру открыть для себя и полюбить Слово Божие."
+    address:                                    "Адрес"
+    city:                                       "Город"
+    state:                                      "Штат / Область"
+    zip:                                        "Индекс"
   download ad:
     title:                                      "Загрузить бесплатное приложение Библия"
     line 1:                                     "Сотни переводов на множестве"
@@ -532,7 +542,9 @@ ru:
     youversion copy:                            "С момента создания LifeChurch.tv в 1996 году, нашей целью было направлять людей на путь верных последователей Христа. При этом мы искали новые пути, с помощью которых люди могли бы связать Библию со своей повседневной жизнью. Наши методы изменились за эти годы, поскольку мы внедрили различные технологии и стратегии. Но в своей основе, фокус остался на важности, и мы последовательно стремимся продемонстрировать и научить людей тому, как Слово Божие касается каждого, независимо от того, кем они являются в жизни."
     youversion copy 2:                          "YouVersion представляет новый рубеж в усилиях LifeChurch.tv. Мы не просто создаем инструмент для воздействия на мир, используя инновационные технологии, но, что более важно, мы приводим людей к Богу, поскольку они начинают осознавать актуальность Библии в своей жизни."
     partners title:                             "Выражаем особую благодарность нашим партнёрам"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Наши команды переводчиков"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Уголок прессы"
     contact header:                             "Контакты для прессы"
