--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -172,6 +172,8 @@ es:
     invalid chapter title:                      "Acerca de Esta Versión"
     invalid chapter text:                       "Este capítulo no existe en esta versión."
     invalid secondary chapter text:             "Este capítulo no existe en su versión secundaria preferida."
+    no secondary version title:                 "Sobre Comparación Paralela"
+    no secondary version text:                  "%{language_name} solo tiene una versión disponible, por eso no pudimos seleccionar una versión secundaria para tí.  Por favor selecciona tu versión secundaria para comparación paralela."
     select another chapter:                     "Escoge un Capítulo Diferente"
     view in reader:                             "ver%(referencia) en lector"
   users:
@@ -234,6 +236,10 @@ es:
     confirm update email success:               "¡Gracias! Usted ha actualizado su dirección de correo electrónico."
     confirm update email error:                 "Lo sentimos, hubo un problema al completar su cambio de dirección de correo electrónico."
     account confirmed:                          "Your account has been confirmed!"
+    account already confirmed:                  "¡Tu cuenta ya ha sido confirmada!  Ingresa para continuar."
+    errors confirming account:                  "Lo lamento, algo falló en nuestro lado. Tu puedes refrescar tu navegador para probar de nuevo o si esto continúa ocurriendo, haz clic abajo para solicitar un nuevo correo de confirmación."
+    invalid confirm hash:                       "Lo lamento, ese código de confirmación parece ser inválido. Tu puedes refrescar tu navegador para probar de nuevo o si esto continúa ocurriendo, haz clic abajo para solicitar un nuevo código de confirmación."
+    confirm password to continue:               "Por favor ingresa tu contraseña para entrar y comenzar"
     invalid email forgot:                       "Lo sentimos, no logramos encontrar una cuenta con esa dirección de correo electrónico. Por favor inténtelo de nuevo."
     error deleting account:                     "Lo sentimos.  Hubo un problema desde su ubicación. Por favor inténtelo de nuevo ó comuníquese con Soporte Técnico."
     send new password button:                   "Enviar una nueva contraseña"
@@ -367,7 +373,7 @@ es:
     edit:                                       "Editar"
     delete:                                     "Eliminar este Marcador"
     title field:                                "Título"
-    lables:                                     "Etiquetas"
+    labels:                                     "Etiqueta"
     all:                                        "Todas"
     labels label:                               "Etiquetas:"
     title:                                      "Marcadores"
@@ -518,6 +524,10 @@ es:
     donate now button:                          "Done ahora"
     email header:                               "YouVersion, un ministerio de LifeChurch.tv, ha recibido su donación. Ningún producto o servicio fue provisto a cambio de dicha donación, a excepción de beneficios religiosos intangibles. Por favor contactenos al correo giving@lifechurch.tv con sus preguntas"
     email footer:                               "Su donación va a ayudar a que personas alrededor del mundo se enamoren de la Palabra de Dios."
+    address:                                    "Dirección"
+    city:                                       "Ciudad"
+    state:                                      "Estado"
+    zip:                                        "Código postal"
   download ad:
     title:                                      "Descarga la Aplicación Gratuita de la Biblia"
     line 1:                                     "Cientos de versiones en muchos"
@@ -532,7 +542,9 @@ es:
     youversion copy:                            "Desde su inicio en 1996,el propósito de LifeChurch.tv ha sido el de guiar a las personas a convertirse totalmente en seguidores devotos de Cristo. De este modo, hemos encontrado nuevas formas de ayudar a la gente a que sus vidas diarias sean conectadas con la Biblia. Nuestra metodología ha cambiado con el curso de los años, hemos incorporado diversas tecnologías y estrategias. Pero en el fondo, nuestro objetivo de relevancia se mantiene, mientras nosotros nos esforzamos constantemente para demostrar y enseñar a las personas como la Palabra de Dios se identifica con todos, sin importar dónde se encuentren en la vida."
     youversion copy 2:                          "YouVersion representa una nueva frontera en los esfuerzos de LifeChurch.tv. No sólo estamos construyendo una herramienta para impactar al mundo utilizando una innovadora tecnología, sino aún más importante, estamos involucrando a la gente a  tener una relación con Dios a medida que descubren la importancia que la Biblia tiene para sus vidas."
     partners title:                             "Un Agradecimiento Especial a Nuestros Socios."
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Nuestros Equipos de Traducción"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Área de Prensa"
     contact header:                             "Información del Contacto de Medios de Comunicación"
