--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -32,7 +32,7 @@ sv:
   you are now following:                        "Du följer nu %{username}"
   you are no longer following:                  "Du följer inte längre %{username}"
   user follows:                                 "%{user} följer dig."
-  user does not follow:                         "%{user} följer inte dig."
+  user does not follow:                         "Håll mig uppdaterad om nyheter från YouVersions innehållspartner."
   no following found self:                      "Du följer ingen ännu. Gå till <a href='%{link}'>hitta vänner</a> och hitta några vänner!"
   no followers found self:                      "Du har inga följare ännu. Gå till <a href='%{link}'>hitta vänner</a> och hitta några vänner!"
   no followers found other:                     "Ingen följer %{username} ännu."
@@ -172,6 +172,8 @@ sv:
     invalid chapter title:                      "Om denna översättning"
     invalid chapter text:                       "Detta kapitel existerar ej i denna översättning."
     invalid secondary chapter text:             "Detta kapitel finns ej för din valda sekundära översättning."
+    no secondary version title:                 "Om parallell jämförelse"
+    no secondary version text:                  "%{language_name} har bara en översättning tillgänglig, så vi kunde inte välja en sekundär översättning åt dig. Välj din sekundära översättning för parallell jämförelse."
     select another chapter:                     "Välj ett annat kapitel"
     view in reader:                             "Visa %{reference} i läsare"
   users:
@@ -234,6 +236,10 @@ sv:
     confirm update email success:               "Tack! Du har uppdaterat din e-postadress."
     confirm update email error:                 "Det uppstod ett problem vid försök att fullfölja din ändring av e-postadress."
     account confirmed:                          "Ditt konto har verifierats!"
+    account already confirmed:                  "Ditt konto har redan bekräftats! Logga in för att fortsätta."
+    errors confirming account:                  "Ledsen, men något fel uppstod hos oss. Du kan pröva att ladda om sidan för att försöka igen. Om problemet kvarstår kan du klicka nedan för att få ett nytt bekräftningsepost."
+    invalid confirm hash:                       "Ledsen, men bekräftningskoden verkar ogiltig. Du kan pröva att ladda om sidan för att försöka igen. Om problemet kvarstår kan du klicka nedan för att få en ny bekräftningskod."
+    confirm password to continue:               "Vänligen ange ditt lösenord för att logga in och komma igång."
     invalid email forgot:                       "Vi kunde inte hitta ett konto med denna e-postadress. Försök igen."
     error deleting account:                     "Det uppstod ett problem hos oss. Försök igen eller kontakta support."
     send new password button:                   "Skicka nytt lösenord"
@@ -367,7 +373,7 @@ sv:
     edit:                                       "Ändra"
     delete:                                     "Ta bort detta bokmärke"
     title field:                                "Titel"
-    lables:                                     "Etiketter"
+    labels:                                     "Etiketter"
     all:                                        "Alla"
     labels label:                               "Etiketter:"
     title:                                      "Bokmärken"
@@ -518,6 +524,10 @@ sv:
     donate now button:                          "Donera nu"
     email header:                               "YouVersion, en ministeriat för LifeChurch.tv har mottagit din donation. Inga varor eller tjänster lämnades i utbyte för donation förutom immateriella religiösa förmåner. Vänligen kontakta giving@lifechurch.tv med frågor."
     email footer:                               "Din gåva kommer att hjälpa människor runt om hela världen att förälska sig i Guds ord. "
+    address:                                    "Adress"
+    city:                                       "Stad"
+    state:                                      "Stat"
+    zip:                                        "Postkod"
   download ad:
     title:                                      "Ladda ner den fria Bibelappen"
     line 1:                                     "Hundratals översättningar på många"
@@ -532,7 +542,9 @@ sv:
     youversion copy:                            "Sedan starten 1996 har syftet för LifeChurch.tv varit att få folk att bli helt hängivna efterföljare till Kristus. För att göra det har vi letat efter nya sätt att hjälpa människor komma i kontakt med Bibeln i deras vardag. Våra metoder har förändrats med åren då vi använt olika tekniker och strategier. Men vårt kärnfokus förändras inte då vi ständigt strävar efter att visa och lära människor hur Guds Ord gäller alla, oavsett var de befinner sig i livet."
     youversion copy 2:                          "YouVersion representerar ett nytt område för LifeChurch.tv:s insatser. Vi bygger inte bara ett verktyg för att påverka världen med innovativ teknik. Framför allt engagerar vi människor i sina relationer med Gud efterhand som de upptäcker den relevans Bibeln har för deras liv."
     partners title:                             "Ett speciellt tack till våra partners"
+    partners text:                              "Utan våra generösa bibelpubliceringspartners skulle YouVersion inte har möjlighet att tillhandahålla vår världsomspännande gemenskap med så många Biblar. Många av er har frågat oss hur ni kan tacka dessa viktiga supporters till YouVersion. Du kan läsa mer om dem om deras ministerium, och ur du kan stödja dem via länken nedan."
     translation title:                          "Vårt översättningsteam"
+    learn more:                                 "Läs mer"
   press page:
     title:                                      "Pressområde"
     contact header:                             "Kontaktinformation för press"
