--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -372,7 +372,8 @@ en:
   bookmarks:
     edit:                                       "Edit"
     delete:                                     "Delete this Bookmark"
-    title field:                                "Title:"
+    title field:                                "Title"
+    title field field:                          "Title:"
     labels:                                     "Labels"
     all:                                        "All"
     labels label:                               "Labels:"
