Add ap; Fix user#update_picture; Add timeout param
 * Added awesome_print in place of all Rails.logger
 * Fixed user#update_picture to be more robust (uploads have a 25 second
   timeout now and don't always fail)
 * Only allowing JP(E)G, GIF and PNG
 * Limited to < 1MB
 * Cleaned up some whitespace in the files that I worked on
 * Switched to 1.9 symbol def in files that I worked on

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -352,6 +352,9 @@ en:
       confirm password:                         "Confirm Password"
       avatar file:                              "Select a file for your picture"
       avatar help:                              "Images can be in JPG, PNG, or GIF format. Your image will be converted to a 48x48 thumbnail. The maximum file size is 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Success! You've updated your picture."
       updated notifications:                    "Success! You've updated your notification settings."
       notification errors:                      "The following error(s) prevented updating your notifications:"
