Press page updates

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -562,9 +562,12 @@ en:
     blog:                                       "YouVersion Blog"
     facebook:                                   "YouVersion on Facebook"
     twitter:                                    "YouVersion on Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle."
     resources title:                            "Press Resources"
+    now title:                                  "Today in the YouVersion Community"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "About YouVersion and The Bible App"
       history:                                  "YouVersion History and Stats"
       manual:                                   "YouVersion Brand Manual"
@@ -577,6 +580,8 @@ en:
       ipad:                                     "Image Collection: iPad"
       android:                                  "Image Collection: Android"
       blackberry:                               "Image Collection: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Image Collection: Lifestyle"
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Coverage Links"
